--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+	<script type="text/javascript" src="procedural/smartInput.js"></script>
 	<script type="text/javascript" src="procedural/main.js"></script>
 	<script type="text/javascript" src="procedural/guess.js"></script>
 </head>
